--- a/package.json
+++ b/package.json
@@ -2,21 +2,28 @@
   "name": "csgostatsgg-scraper",
   "version": "0.1.0",
   "description": "Programatically pull data from csgostats.gg pages via page scraping",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "test": "jest --coverage",
-    "build": "tsc",
-    "lint": "eslint **/*.ts",
-    "start": "node dist/index.js"
+    "build": "rimraf dist && rollup -c rollup.config.ts",
+    "lint": "tsc --noEmit && eslint src/**/*.ts"
   },
   "keywords": [
     "csgostatsgg",
     "csgostats",
     "csgostats.gg",
     "api",
-    "csgo"
+    "csgo",
+    "scraper"
   ],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/claabs/csgostatsgg-scraper.git"
+  },
+  "homepage": "https://github.com/claabs/csgostatsgg-scraper",
+  "author": "claabs",
   "license": "MIT",
   "dependencies": {
     "chrono-node": "^2.3.2",
@@ -27,6 +34,8 @@
     "steamid": "^2.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@types/debug": "^4.1.7",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.6",
@@ -41,6 +50,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.1",
     "prettier": "^2.4.1",
+    "rollup": "^2.59.0",
+    "rollup-plugin-sourcemaps": "^0.6.3",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.4"
