--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2021", /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */
-    "module": "commonjs", /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
+    "module": "esnext", /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
     "outDir": "./dist", /* Redirect output structure to the directory. */
-    "removeComments": true, /* Do not emit comments to output. */
     "esModuleInterop": true,
     "strict": true, /* Enable all strict type-checking options. */
     "moduleResolution": "node", /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
@@ -12,17 +11,17 @@
       "types"
     ], /* List of folders to include type definitions from. */
     "inlineSourceMap": true, /* Emit a single file with source maps instead of having a separate file. */
-    "forceConsistentCasingInFileNames": true, /* Disallow inconsistently-cased references to the same file. */
-    // "rootDir": ".",
     "useUnknownInCatchVariables": false,
-    "experimentalDecorators": true,
-    "skipLibCheck": true,
+    "skipLibCheck": true, // awaited-dom has compile issues
+    "declaration": true,
+    "declarationDir": "."
   },
   "include": [
-    "**/*.ts"
+    "**/*.ts",
+    "*.js"
   ],
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
   ]
 }
