--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "author": "claabs",
   "license": "MIT",
   "dependencies": {
-    "@ulixee/hero-fullstack": "^2.0.0-alpha.3",
+    "@ulixee/hero": ">2.0.0-alpha <3",
     "chrono-node": "^2.3.7",
     "debug": "^4.3.3",
     "p-queue": "^6.6.2",
@@ -44,6 +44,7 @@
     "@types/steamid": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
+    "@ulixee/hero-fullstack": ">2.0.0-alpha <3",
     "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.4.0",
@@ -58,6 +59,14 @@
     "ts-jest": "^27.1.3",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
+  },
+  "peerDependencies": {
+    "@ulixee/hero-fullstack": ">2.0.0-alpha <3"
+  },
+  "peerDependenciesMeta": {
+    "@ulixee/hero-fullstack": {
+      "optional": true
+    }
   },
   "engines": {
     "node": "16"
