--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
   "author": "claabs",
   "license": "MIT",
   "dependencies": {
-    "@ulixee/hero": ">2.0.0-alpha <3",
+    "@ulixee/commons": "^2.0.0-alpha.5",
+    "@ulixee/hero": "^2.0.0-alpha.5",
+    "@ulixee/net": "^2.0.0-alpha.5",
     "chrono-node": "^2.3.7",
     "debug": "^4.3.3",
     "p-queue": "^6.6.2",
     "steamid": "^2.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
     "@semantic-release/github": "^8.0.2",
@@ -44,7 +47,7 @@
     "@types/steamid": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
-    "@ulixee/hero-fullstack": ">2.0.0-alpha <3",
+    "@ulixee/hero-core": "^2.0.0-alpha.5",
     "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.4.0",
@@ -61,10 +64,10 @@
     "typescript": "^4.5.5"
   },
   "peerDependencies": {
-    "@ulixee/hero-fullstack": ">2.0.0-alpha <3"
+    "@ulixee/hero-core": ">2.0.0-alpha <3"
   },
   "peerDependenciesMeta": {
-    "@ulixee/hero-fullstack": {
+    "@ulixee/hero-core": {
       "optional": true
     }
   },
