--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "csgostatsgg-scraper",
   "version": "2.0.0",
-  "description": "Programatically pull data from csgostats.gg pages via page scraping",
+  "description": "Programmatically pull data from csgostats.gg pages via page scraping",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "typings": "dist/index.d.ts",
@@ -27,9 +27,9 @@
   "author": "claabs",
   "license": "MIT",
   "dependencies": {
-    "@ulixee/commons": "^2.0.0-alpha.5",
-    "@ulixee/hero": "^2.0.0-alpha.5",
-    "@ulixee/net": "^2.0.0-alpha.5",
+    "@ulixee/commons": "^2.0.0-alpha.21",
+    "@ulixee/hero": "^2.0.0-alpha.21",
+    "@ulixee/net": "^2.0.0-alpha.21",
     "chrono-node": "^2.3.7",
     "debug": "^4.3.3",
     "p-queue": "^6.6.2",
@@ -47,7 +47,7 @@
     "@types/steamid": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
-    "@ulixee/hero-core": "^2.0.0-alpha.5",
+    "@ulixee/hero-core": "^2.0.0-alpha.21",
     "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.4.0",
